# Grabbie

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md  commit.sh
pkg/Grabbie/: .BUILDINFO  .MTREE  .PKGINFO
pkg/grabbie/: .BUILDINFO  .MTREE  .PKGINFO
pkg/grabbie/usr/share/licenses/grabbie/: LICENSE
src/: cli.rs  download.rs  error.rs  main.rs  progress.rs
