[package]
name = "grabbie"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
indicatif = "0.17"
anyhow = "1.0"
futures-util = "0.3"
clap = { version = "4.1", features = ["derive"] }
colored = "2.0"
thiserror = "1.0"